# scientific-and-engineering-c-

./: README.md
ch13/array/: README.md  build.sh  main.cpp  meson.build  test.cpp
ch13/array/src/: concrete_array_1d.hpp  concrete_array_1d_const_ref.hpp  concrete_array_1d_ref.hpp  concrete_array_2d.hpp  concrete_array_2d_const_ref.hpp  concrete_array_2d_ref.hpp  concrete_array_projection_1d.hpp  concrete_array_shape.hpp  concrete_array_shape_test.cpp  concrete_column_major_array_2d.hpp  concrete_column_major_array_2d_test.cpp  concrete_column_major_projection_subscriptor.hpp  concrete_column_major_subscriptor.hpp  concrete_column_major_subscriptor_test.cpp  concrete_strides.hpp  const_concrete_array_projection_1d.hpp  subscript.hpp  subscript_array.hpp  subscript_array_test.cpp
ch14/pointers/: CMakeLists.txt  Doxyfile  main.cpp  test.cpp
ch14/pointers/src/: copied_built_in_ptr.hpp  copied_built_in_ptr_test.cpp  copied_object_ptr.hpp  copied_object_ptr_test.cpp  copied_object_ptr_test.hpp  reference_count.hpp  reference_count_test.cpp
ch8/: main.cpp  mesh.in  meson.build
ch8/src/: types.hpp
ch8/src/containers/: simple_array.hpp
ch8/src/geometry/: line.cpp  line.hpp  point.cpp  point.hpp
ch8/src/mesh/: element.cpp  element.hpp  element_nodes_iterator.cpp  element_nodes_iterator.hpp  mesh.cpp  mesh.hpp  mesh_elements_iterator.cpp  mesh_elements_iterator.hpp  mesh_nodes_iterator.cpp  mesh_nodes_iterator.hpp  node.cpp  node.hpp  node_reader.cpp  node_reader.hpp
